--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.1.3",
     "@nestjs/typeorm": "^11.0.0",
     "mysql2": "^3.14.0",
     "pg": "^8.14.1",
